--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -6,28 +6,40 @@
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject NavigationManager NavigationManager
 
-<EditForm Model="myModel" OnValidSubmit="Success">
-    <DataAnnotationsValidator/>
-    <div class="mat-layout-grid pt-5">
-        <div class="mat-layout-grid-inner">
-            <div class="mat-layout-grid-cell mat-layout-grid-cell-span-6">
-                <img src="/logo.png"/>
-            </div>
-            <div class="mat-layout-grid-cell mat-layout-grid-cell-span-6">
-                <h2>Login</h2>
-                <p>
-                    <MatTextField Label="Username" @bind-Value="myModel.Username"/>
-                    <ValidationMessage For="@(() => myModel.Username)"/>
-                </p>
-                <p>
-                    <MatTextField Label="Password" @bind-Value="myModel.Password" Type="password"/>
-                    <ValidationMessage For="@(() => myModel.Password)"/>
-                </p>
-                <MatButton Type="submit" Raised="true">Login</MatButton>
+<div class="main-login-page">
+    <div class="container py-5 py-sm-7">
+        <div class="row justify-content-center mb-5">
+            <img src="user-avatar-with-check-mark.svg" alt="" class="login-page-logo">
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-7 col-lg-5">
+                <div class="card card-lg mb-5">
+                    <div class="card-body">
+                        <div class="text-center">
+                            <h1>Sign In</h1>
+                            <p>Enter your username and password</p>
+                        </div>
+                        <EditForm Model="myModel" OnValidSubmit="Success">
+                            <DataAnnotationsValidator />
+                            <div class="form-group">
+                                <label for="loginUsername" class="input-label text-capitalize">Username</label>
+                                <InputText class="form-control form-control-lg" autocomplete="off" tabindex="1" Placeholder="Username"
+                                    id="loginUsername" @bind-Value="@myModel.Username" />
+                            </div>
+                            <div class="form-group">
+                                <label for="loginPassword" class="input-label text-capitalize">Password</label>
+                                <InputText  type="password" tabindex="2" class="form-control form-control-lg"
+                                    Placeholder="Password" id="loginPassword" @bind-Value="@myModel.Password" />
+                            </div>
+                            <button type="submit" class="btn btn-lg btn-block btn-primary">Sign In</button>
+                        </EditForm>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</EditForm>
+</div>
+
 
 
 @code {
@@ -45,12 +57,16 @@
         }
 
     }
-    async Task Success(){
-        var userFromService = await ((CustomAuthenticationStateProvider)AuthenticationStateProvider).AuthenticateUser(myModel.Username, myModel.Password);
-        if(userFromService == false){
+    async Task Success()
+    {
+        var userFromService = await
+        ((CustomAuthenticationStateProvider)AuthenticationStateProvider).AuthenticateUser(myModel.Username, myModel.Password);
+        if (userFromService == false)
+        {
             await JS.InvokeAsync<object>("alert", "Unsuccessful login!");
         }
-        else{
+        else
+        {
             await JS.InvokeAsync<object>("alert", "Successful login!");
             NavigationManager.NavigateTo("/");
         }
