--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -14,8 +14,11 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <link href="css/login.css" rel="stylesheet" />
+    <link href="css/machine.css" rel="stylesheet" />
     <link href="RoyalstarAdminPanel.styles.css" rel="stylesheet" />
     <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
@@ -31,6 +34,8 @@
         <a class="dismiss">🗙</a>
     </div>
 
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+    <script src="_content/BlazorTable/BlazorTable.min.js"></script>
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MatBlazor/dist/matBlazor.js"></script>
 </body>
