--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -48,3 +48,66 @@ a, .btn-link {
         right: 0.75rem;
         top: 0.5rem;
     }
+
+/* Special Changes */
+
+.input-label{
+    display: block;
+    color: #1e2022;
+    font-size: .875rem;
+}
+
+.form-control-lg{
+    height: calc(1.5em + 1.875rem);
+    padding: .875rem 1.09375rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .3125rem;
+}
+
+.form-control{
+    display: block;
+    width: 100%;
+    height: calc(1.6em + 1.21875rem);
+    padding: .54688rem .875rem;
+    font-size: .875rem;
+    font-weight: 400;
+    line-height: 1.6;
+    color: #1e2022;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: .0625rem solid #e7eaf3;
+    border-radius: .3125rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.form-control:focus{
+    border: .0500rem solid #0093E9;
+    -webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+}
+
+.card{
+    border-radius: 0.50rem;
+}
+
+.card-body{
+    padding: 2rem;
+}
+
+.btn-primary{
+    background-color: #0093E9;
+}
+
+.btn-primary:hover{
+    background-color: #0093E9;
+    border-color: #80D0C7;
+}
+
+.btn, .btn-lg{
+    padding: .875rem 1.09375rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .3125rem;
+}
