--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,4 +1,5 @@
 @using Data
+@using RoyalstarAdminPanel.Pages
 @inherits LayoutComponentBase
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject NavigationManager NavigationManager
@@ -22,7 +23,7 @@
         </Authorized>
         <NotAuthorized>
             <div class="px-0">
-                @Body
+                <Login />
             </div>
         </NotAuthorized>
     </AuthorizeView>
